<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/receive_message"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/receiveMessage_textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textSize="18sp"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/send_message"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/aimUserId_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/send_user_id_hint"
        android:inputType="text"/>

    <EditText
        android:id="@+id/messageContent_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_message_hint"
        android:inputType="text"/>

    <Button
        android:id="@+id/sendMessage_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/send"/>


</LinearLayout>